--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @collection do |f| %>
+<%= form_for(@collection, remote: true) do |f| %>
   <%= f.text_field :custom_name, class: 'form-control' %>
   <%= f.hidden_field(:default, :value => false) if @collection.new_record? %>
   <label><%= f.radio_button(:needs_platform, true) %>Adding games require you to choose platform</label>
