--- a/app/views/panels_view/_game_panel.html.erb
+++ b/app/views/panels_view/_game_panel.html.erb
@@ -69,7 +69,7 @@
 <script>
 moreInfo(<%= id %>);
 </script>
-<div id="copy-form-<%= id %>" class="add-form" uk-dropdown="toggle: #g-copy-<%= id %>; mode: click; pos: bottom-left; delay-hide: 100; ">
+<div id="copy-form-<%= id %>" class="add-form" uk-dropdown="toggle: #g-copy-<%= id %>; mode: click; pos: right-top; delay-hide: 100; ">
 <button class="uk-dropdown-close add-form-close" type="button" uk-close></button>
 <%= render partial: 'panels_view/copy_form', locals: { game: game, collection: collection } %>
 </div>
