--- a/app/views/static_pages/settings.html.erb
+++ b/app/views/static_pages/settings.html.erb
@@ -1,1 +1,30 @@
-<h1>Settings</h1>
+
+<div class="boundary uk-panel uk-placeholder uk-width-2-3@s">
+
+    <button class="uk-button uk-button-default uk-float-left" type="button">Hover</button>
+    <div uk-dropdown="boundary: .boundary; boundary-align: true; pos: right-top">
+        <ul class="uk-nav uk-dropdown-nav">
+            <li class="uk-active"><a href="#">Active</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-header">Header</li>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-divider"></li>
+            <li><a href="#">Item</a></li>
+        </ul>
+    </div>
+
+    <button class="uk-button uk-button-default uk-float-right" type="button">Hover</button>
+    <div uk-dropdown="boundary: .boundary; boundary-align: true; pos: right-top">
+        <ul class="uk-nav uk-dropdown-nav">
+            <li class="uk-active"><a href="#">Active</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-header">Header</li>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">Item</a></li>
+            <li class="uk-nav-divider"></li>
+            <li><a href="#">Item</a></li>
+        </ul>
+    </div>
+
+</div>
