--- a/app/views/panels_view/_my_games_panels.html.erb
+++ b/app/views/panels_view/_my_games_panels.html.erb
@@ -91,8 +91,8 @@ function resetFormErrors(form, game_id) {
     }
 }
 
-function preselectPlatform(id, platform) {
-    var form = '#edit-form-' + id;
+function preselectPlatform(type, id, platform) {
+    var form = '#' + type + '-form-' + id;
     var element = form + " #game_platform option[value^='" + platform + ",']";
     $(element).attr("selected","selected");
     $(form + ' .cf-platform-icon').attr('class', 'cf-platform-green');
